@@ -19,7 +19,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
 
 public class SwadlParser {
 
@@ -44,13 +43,11 @@ public class SwadlParser {
   }
 
   public static Workflow fromYaml(File workflowFile) throws IOException, ProcessingException {
-    String yamlString = new String(Files.readAllBytes(workflowFile.toPath()));
+    String yamlString = Files.readString(workflowFile.toPath(), StandardCharsets.UTF_8);
     SwadlValidator.validateYaml(yamlString);
     Workflow workflow = MAPPER.readValue(yamlString, Workflow.class);
     if (workflow.getId() == null) {
-      workflow.setId(Path.of(workflowFile.getAbsolutePath())
-          .getFileName()
-          .toString()
+      workflow.setId(workflowFile.getName()
           .replaceAll(".swadl", "")
           .replaceAll(".yaml", ""));
     }
